<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_booking_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/booking_history" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>


</menu>
